MDEV-5056: Wrong result (extra rows) with materialization+semijoin, IN subqueries Apply fix suggested by Igor: - When eliminate_item_equal() generates pair-wise equalities from a   multi-equality,  do generate a "bridge" equality between the first   field inside SJM nest and the field that's first in the overall multi-equality.